--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <button class="link-items">
                 <p>Arabic</p>
-                <img src="icons/arabic.jpg" class="arabic" alt="">
+                <img src="icons/globe.png" class="arabic" alt="">
             </button>
 
             <button class="link-items">
