--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </button>
 
             <button class="link-items">
-                <p>Haitian Creole</p>
+                <p>Haitian Creole!</p>
                 <img src="icons/haiti.png" alt="">
             </button>
 
