--- a/index.html
+++ b/index.html
@@ -15,30 +15,40 @@
             Language Options
         </div>
         <div class="links-buttons">
+            <a href="/posters/spanish.html">
             <button class="link-items">
                 <p>Spanish</p>
                 <img src="icons/spain.png" alt="">
             </button>
+            </a>
 
+            <a href="/posters/haitian-creole.html">
             <button class="link-items">
-                <p>Haitian Creole!</p>
+                <p>Haitian Creole</p>
                 <img src="icons/haiti.png" alt="">
             </button>
+            </a>
 
+            <a href="/posters/portugese.html">
             <button class="link-items">
                 <p>Portugese</p>
                 <img src="icons/portugal.png" alt="">
             </button>
+            </a>
 
+            <a href="/posters/arabic.html">
             <button class="link-items">
                 <p>Arabic</p>
                 <img src="icons/globe.png" class="arabic" alt="">
             </button>
+            </a>
 
+            <a href="/posters/chinese.html">
             <button class="link-items">
                 <p>Chinese</p>
                 <img src="icons/china.png" alt="">
             </button>
+            </a>
         </div>
 
 
