--- a/posters/chinese.html
+++ b/posters/chinese.html
@@ -15,7 +15,7 @@
             border-top-right-radius: 16px;
             border-bottom-right-radius: 16px;
         ">
-            <img src="../icons/return.png" style="width: 12px; padding: 0;" alt="">
+            <img src="../icons/returnh.png" style="width: 12px; padding: 0;" alt="">
         </button>
     </a>
 </body>
